# protobuf-integration

./: CMakeLists.txt  Dockerfile  Makefile  README.md  example.proto
.github/workflow/: docker-build.yml
scripts/: build_and_run.sh  run-deps.sh
src/: CMakeLists.txt  main.cpp
test/: runner-test.py
